added basic styling and another button for showing results

--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -4,13 +4,17 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Home</title>
+	<link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
-	<h1>Home</h1>
-	
-	<a href="/form">Form</a><br><br>
-	<hr>
+	<div id="main-back">
+	<h1>Name Guesser</h1>
+		<div id="main-buttons">
+			<a class="button-link" href="/form">Enter Information Here</a>
+			<a class="button-link" href="/form">Look Up Data</a>
+		</div>
+	</div>
 </body>
 
 </html>
