--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -4,18 +4,26 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Age Guesser</title>
+	<link rel="stylesheet" href="/styles.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75,100..900;1,75,100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+	<div id="main-back">
 	<h1>Age Guesser</h1>
 	<form action="http://localhost:<%= port %>/response" method="post">
 		<fieldset>
-			<label>Enter Name: <input type="text" name="name"/></label>
+		<label>Enter Name: <input type="text" name="name"/></label>
 		<br><br>
-		<input type="reset" value="Clear"/>
-		<input type="submit" value="Submit"/>
+		<input class="input_btn" type="reset" value="Clear"/>
+		<input class="input_btn" type="submit" value="Submit"/>
+		</fieldset>
 	</form>
-	<br>
+	<a id="home_btn" class="button-link" href="/">Home</a>
+	</div>
 </body>
 
 </html>
