Updated error handling when fetch does not work in time. Also cleaned input so it is alwasy lowercase and any spaces are removed so names that are the same are not stored seperate in the mongoDB

--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -13,7 +13,7 @@
 
 <body>
 	<div id="main-back">
-	<h1>Name Guesser</h1>
+	<h1>Age Guesser</h1>
 		<div id="main-buttons">
 			<a class="button-link" href="/form">Enter Information Here</a>
 			<a class="button-link" href="/form">Look Up Data</a>
