--- a/templates/response.ejs
+++ b/templates/response.ejs
@@ -14,7 +14,7 @@
 	<div id="main-back">
 		<h1>Guessed Age</h1>
 		<div id="resp-div">
-		<p><strong><%- name %></strong> is <strong><%- guess %></strong> years old</p>
+		<p><strong>Name: </strong><%- name %>,<strong> Age: </strong><%- guess %></p>
 		</div>
 		<div id="main-buttons">
 			<a class="button-link" href="/form">Another Guess</a>
