--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -16,7 +16,9 @@
 	<h1>Age Guesser</h1>
 		<div id="main-buttons">
 			<a class="button-link" href="/form">Enter Information Here</a>
-			<a class="button-link" href="/form">Look Up Data</a>
+			<form action="/receive" method="post">
+				<input id="main-in" class="button-link" type="submit" value="View All Data"/>
+			</form>
 		</div>
 	</div>
 </body>
