trying another fix

--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -14,7 +14,7 @@
 <body>
 	<div id="main-back">
 	<h1>Age Guesser</h1>
-	<form action="http://localhost:<%= port %>/response" method="post">
+	<form action="/response" method="post">
 		<fieldset>
 		<label>Enter Name: <input type="text" name="name"/></label>
 		<br><br>
